--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,3 +3,11 @@
 .btn-primary {
   @apply bg-blue-500 text-white font-bold py-2 px-4 rounded hover:bg-blue-700;
 }
+
+@theme {
+  --color-brand: #1d4ed8;
+}
+
+bg-brand {
+  background-color: var(--color-brand);
+}
